--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Cool guy bot",
-  "description": "Basic Groupme Bot written in Node",
-  "repository": "https://github.com/petemcgrath/cool-guy-bot",
-  "logo": "http://www.tailgate365.com/wp-content/uploads/2011/06/tom-hanks-906.jpg",
+  "name": "BruleBot",
+  "description": "I'm a doctor too!",
+  "repository": "https://github.com/jfriedman139/bot-nodejs",
+  "logo": "https://i.groupme.com/640x360.jpeg.3d0ee800068941cfa2b45650a63ab406",
   "keywords": []
 }
